// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list mount 1`] = `
List {
  "head": "{\\"MountCommand\\":{\\"AddMount\\":[\\"/mnt/fs-OST0002\\",\\"/dev/sdd\\",\\"lustre\\",\\"ro\\"]}}",
  "tail": List {
    "head": undefined,
    "tail": undefined,
  },
}
`;

exports[`list then poll mount 1`] = `
List {
  "head": "{\\"MountCommand\\":{\\"AddMount\\":[\\"/sys\\",\\"sysfs\\",\\"sysfs\\",\\"rw,nosu\\"]}}",
  "tail": List {
    "head": "{\\"MountCommand\\":{\\"AddMount\\":[\\"/proc\\",\\"proc\\",\\"proc\\",\\"rw,nosu\\"]}}",
    "tail": List {
      "head": "{\\"MountCommand\\":{\\"AddMount\\":[\\"/run\\",\\"tmpfs\\",\\"tmpfs\\",\\"rw,nosu\\"]}}",
      "tail": List {
        "head": "{\\"MountCommand\\":{\\"AddMount\\":[\\"/\\",\\"/dev/disk/by-uuid/6fa5a72a-ba26-4588-a103-74bb6b33a763\\",\\"ext4\\",\\"rw,rela\\"]}}",
        "tail": List {
          "head": "{\\"MountCommand\\":{\\"AddMount\\":[\\"/mnt/fs-OST0002\\",\\"/dev/sdd\\",\\"lustre\\",\\"ro\\"]}}",
          "tail": List {
            "head": undefined,
            "tail": undefined,
          },
        },
      },
    },
  },
}
`;

exports[`list then poll move 1`] = `
List {
  "head": "{\\"MountCommand\\":{\\"AddMount\\":[\\"/mnt/fs-OST0002\\",\\"/dev/sdd\\",\\"lustre\\",\\"ro\\"]}}",
  "tail": List {
    "head": "{\\"MountCommand\\":{\\"MoveMount\\":[\\"/mnt/fs-OST0002\\",\\"/dev/sdd\\",\\"lustre\\",\\"ro\\",\\"/mnt/fs-OST0003\\"]}}",
    "tail": List {
      "head": undefined,
      "tail": undefined,
    },
  },
}
`;

exports[`list then poll remount 1`] = `
List {
  "head": "{\\"MountCommand\\":{\\"AddMount\\":[\\"/mnt/fs-OST0002\\",\\"/dev/sdd\\",\\"lustre\\",\\"ro\\"]}}",
  "tail": List {
    "head": "{\\"MountCommand\\":{\\"ReplaceMount\\":[\\"/mnt/fs-OST0002\\",\\"/dev/sdd\\",\\"lustre\\",\\"ro\\",\\"rw,rela\\"]}}",
    "tail": List {
      "head": undefined,
      "tail": undefined,
    },
  },
}
`;

exports[`list then poll umount 1`] = `
List {
  "head": "{\\"MountCommand\\":{\\"AddMount\\":[\\"/mnt/fs-OST0002\\",\\"/dev/sdd\\",\\"lustre\\",\\"ro\\"]}}",
  "tail": List {
    "head": "{\\"MountCommand\\":{\\"RemoveMount\\":[\\"/mnt/fs-OST0002\\",\\"/dev/sdd\\",\\"lustre\\",\\"ro\\"]}}",
    "tail": List {
      "head": undefined,
      "tail": undefined,
    },
  },
}
`;

exports[`poll mount 1`] = `
List {
  "head": "{\\"MountCommand\\":{\\"AddMount\\":[\\"/mnt/part1\\",\\"/dev/sde1\\",\\"ext4\\",\\"rw,relatime,data=ordered\\"]}}",
  "tail": List {
    "head": undefined,
    "tail": undefined,
  },
}
`;

exports[`poll mount then umount 1`] = `
List {
  "head": "{\\"MountCommand\\":{\\"AddMount\\":[\\"/testPool4\\",\\"testPool4\\",\\"zfs\\",\\"rw,xattr,noacl\\"]}}",
  "tail": List {
    "head": "{\\"MountCommand\\":{\\"AddMount\\":[\\"/testPool4/home\\",\\"testPool4/home\\",\\"zfs\\",\\"rw,xattr,noacl\\"]}}",
    "tail": List {
      "head": "{\\"MountCommand\\":{\\"RemoveMount\\":[\\"/testPool4/home\\",\\"testPool4/home\\",\\"zfs\\",\\"rw,xattr,noacl\\"]}}",
      "tail": List {
        "head": "{\\"MountCommand\\":{\\"RemoveMount\\":[\\"/testPool4\\",\\"testPool4\\",\\"zfs\\",\\"rw,xattr,noacl\\"]}}",
        "tail": List {
          "head": undefined,
          "tail": undefined,
        },
      },
    },
  },
}
`;

exports[`poll move 1`] = `
List {
  "head": "{\\"MountCommand\\":{\\"MoveMount\\":[\\"/mnt/part1a\\",\\"/dev/sde1\\",\\"ext4\\",\\"ro,relatime,data=ordered\\",\\"/mnt/part1\\"]}}",
  "tail": List {
    "head": undefined,
    "tail": undefined,
  },
}
`;

exports[`poll remount 1`] = `
List {
  "head": "{\\"MountCommand\\":{\\"ReplaceMount\\":[\\"/mnt/part1\\",\\"/dev/sde1\\",\\"ext4\\",\\"ro,relatime,data=ordered\\",\\"rw,relatime,data=ordered\\"]}}",
  "tail": List {
    "head": undefined,
    "tail": undefined,
  },
}
`;

exports[`poll umount 1`] = `
List {
  "head": "{\\"MountCommand\\":{\\"RemoveMount\\":[\\"/testPool4\\",\\"testPool4\\",\\"zfs\\",\\"rw,xattr,noacl\\"]}}",
  "tail": List {
    "head": undefined,
    "tail": undefined,
  },
}
`;
